--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "76d-social-icons": "~1.0.4",
     "bootstrap-sass": "~3.3.5",
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "smooth-scroll": "https://github.com/cferdinandi/smooth-scroll.git#~7.1.1"
   },
   "overrides": {
     "bootstrap-sass": {
